@@ -1,8 +1,8 @@
 {
   "timestamp" : "2024-04-24T08:15:35Z",
-  "count" : 31,
-  "count_minmax" : [ 31, 50 ],
-  "count_decinc" : [ -19, +50 ],
+  "count" : 110,
+  "count_minmax" : [ 110, 110 ],
+  "count_decinc" : [ -0, +110 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
