@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-04-24T00:52:29Z",
+  "timestamp" : "2024-04-24T08:15:35Z",
   "count_outdated" : 198980,
   "uniques_outdated" : 2003,
-  "count" : 201929,
-  "uniques" : 2024,
+  "count" : 202039,
+  "uniques" : 2025,
   "clones" : [
     {
       "timestamp": "2024-04-10T00:00:00Z",
-      "count": 49,
-      "count_minmax": [ 49, 50 ],
-      "count_decinc": [ 1, 50 ],
+      "count": 31,
+      "count_minmax": [ 31, 50 ],
+      "count_decinc": [ 19, 50 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +127,15 @@
       "count": 295,
       "count_minmax": [ 110, 295 ],
       "count_decinc": [ 0, 295 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-04-24T00:00:00Z",
+      "count": 110,
+      "count_minmax": [ 110, 110 ],
+      "count_decinc": [ 0, 110 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
