@@ -1,10 +1,10 @@
 {
-  "count": 2948,
+  "count": 3040,
   "uniques": 3,
   "clones": [
     {
       "timestamp": "2024-04-10T00:00:00Z",
-      "count": 49,
+      "count": 31,
       "uniques": 1
     },
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2024-04-23T00:00:00Z",
       "count": 295,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-04-24T00:00:00Z",
+      "count": 110,
       "uniques": 1
     }
   ]
